<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ServersettingsActivity">

    <EditText
        android:id="@+id/textInputAdressID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/arimo"

        android:hint="https://..."
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/arimo"
        android:text="URL des Backends: "
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputAdressID"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/speichernButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:text="Speichern"
        android:fontFamily="@font/arimo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputAdressID"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/currentBackendAdressID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arimo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speichernButtonID"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/defaultButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/arimo"
        android:text="auf Default Wert zurücksetzen "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentBackendAdressID"
        app:layout_constraintVertical_bias="0.193" />

    <TextView
        android:id="@+id/defaultValueTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:fontFamily="@font/arimo"
        app:layout_constraintEnd_toEndOf="@+id/defaultButtonID"
        app:layout_constraintStart_toStartOf="@+id/defaultButtonID"
        app:layout_constraintTop_toBottomOf="@+id/defaultButtonID" />

    <Button
        android:id="@+id/button_clear_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/arimo"
        android:text="Datenbank leeren"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defaultValueTextID" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>