...
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/comment_button_color"
                android:gravity="center"
                android:text="Karte anschauen"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_subprojects">

            </Button>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_subprojects"
                android:layout_width="match_parent"
...
